--- a/2.2-databases-2/orm_migrations/templates/school/students_list.html
+++ b/2.2-databases-2/orm_migrations/templates/school/students_list.html
@@ -7,6 +7,10 @@
   <ul>
   {% for student in object_list %}
     <li>{{ student.name }} {{ student.group }} <br> Преподаватель: {{ student.teacher.name }} {{ student.teacher.subject }}</li>
+        {% for teacher in student.teachers.all %}
+            <p>{{ teacher.name }}: {{ teacher.subject }}</p>
+        {% endfor %}
+    <br>
   {% endfor %}
   </ul>
 </div>
